--- a/StreamTools/StreamTools/StreamTools.csproj
+++ b/StreamTools/StreamTools/StreamTools.csproj
@@ -61,7 +61,9 @@
 		<PackageReference Include="Blazorise" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Animate" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Components" Version="1.4.2" />
+		<PackageReference Include="Blazorise.DataGrid" Version="1.4.2" />
 		<PackageReference Include="Blazorise.FluentValidation" Version="1.4.2" />
+		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Icons.Material" Version="1.4.2" />
 		<PackageReference Include="Blazorise.LoadingIndicator" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Material" Version="1.4.2" />
