--- a/StreamTools/StreamTools/StreamTools.csproj
+++ b/StreamTools/StreamTools/StreamTools.csproj
@@ -58,6 +58,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Fonts\Roboto-Regular.ttf" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Blazorise" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Animate" Version="1.4.2" />
 		<PackageReference Include="Blazorise.Components" Version="1.4.2" />
