--- a/StreamTools/StreamTools/StreamTools.csproj
+++ b/StreamTools/StreamTools/StreamTools.csproj
@@ -112,4 +112,10 @@
 	  </PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="PopupIframe.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
